@@ -1,0 +1,13 @@
+fastcgi.server = ( ".php" => (( 
+                     "bin-path" => "/path/to/php-cgi",
+                     "socket" => "/tmp/php.socket",
+                     "max-procs" => 2,
+                     "bin-environment" => ( 
+                       "PHP_FCGI_CHILDREN" => "16",
+                       "PHP_FCGI_MAX_REQUESTS" => "10000"
+                     ),
+                     "bin-copy-environment" => (
+                       "PATH", "SHELL", "USER"
+                     ),
+                     "broken-scriptfilename" => "enable"
+                 )))
